# exoplanets

./: LICENSE  README.md  exoplanets.sln
core/Entities/: Planet.cs  PlanetSystem.cs  Star.cs  StarSystem.cs
core/Enums/: PlanetStatus.cs
data/: Makefile  Pipfile  README.md  ROADMAP.md  pyproject.toml
data/etl/: __init__.py  __main__.py  app.py  cli.py
data/src/api/: exoplanets.py
data/src/etl/: __main__.py  app.py
data/src/etl/query/: base.py
data/src/query/: __init__.py  api.py  base.py  nasa.py  spec.py
data/test/: __init__.py
data/test/test_etl/: test_app.py  test_cli.py  test_exoplanets.py  test_get_planets.py  test_nasa.py  test_query.py
