[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=2 -rf"  # exit after 2 failures, report fail info
pythonpath = [
  "src"
]
testpaths = [
    "test"
]


[project]
packages = [
  { include = "src" }
]